--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.7",
     "cobe": "^0.6.3",
+    "lucide-react": "^0.511.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
+    "react-router": "^7.6.1",
     "tailwindcss": "^4.1.7"
   },
   "devDependencies": {
